docker env variable safe special chars

--- a/src/appsettings.secrets.json
+++ b/src/appsettings.secrets.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=test;Username=test_app;Password= A`~!@#$%^&*()_+-={}[]|:<>,./? ;Ssl Mode=VerifyCA;"
+    "DefaultConnection": "Server=localhost;Database=test;Username=test_app;Password= A`~@#%^*()_+-={}[]|:<>,./? ;Ssl Mode=VerifyCA;"
   }
 }
