--- a/src/compose.yaml
+++ b/src/compose.yaml
@@ -6,4 +6,4 @@ services:
     ports:
       - "5000:80"
     environment:
-      - ConnectionStrings__DefaultConnection=Server=localhost;Database=test;Username=test_app;Password= A`~!@#$%^&*()_+-={}[]|:<>,./? ;Ssl Mode=VerifyCA;
+      - ConnectionStrings__DefaultConnection=Server=localhost;Database=test;Username=test_app;Password= A`~@#%^*()_+-={}[]|:<>,./? ;Ssl Mode=VerifyCA;
